--- a/resource/css/index.css
+++ b/resource/css/index.css
@@ -89,14 +89,16 @@ input:checked + .slider:before {
 
 /* Tips */
 .tips-text {
-    position: relative;
-    font-size: 23px;
+  position: relative;
+  font-size: 23px;
 }
 
 /* Round Botton */
 .roundbotton {
-    width: 35px;
-    height: 35px;
-    background-color: #E1E0E0;
-    border-radius: 8px;
+  float: left;
+  width: 35px;
+  height: 35px;
+  background-color: #E1E0E0;
+  border-radius: 8px;
+  margin-left: 8px;
 }
